[gd_scene load_steps=6 format=3 uid="uid://rty6a0w0qrh0"]

[ext_resource type="Script" path="res://Scripts/Menus/LevelSelect.gd" id="1_8yv23"]
[ext_resource type="PackedScene" uid="uid://c6og6s6f5eqrn" path="res://Scenes/Overlay.tscn" id="2_eccf3"]
[ext_resource type="Texture2D" uid="uid://dxf173ejkydvt" path="res://Images/LevelImage.png" id="3_nlsst"]
[ext_resource type="PackedScene" uid="uid://d3bug1vt3rkra" path="res://Scenes/Menus/LevelList.tscn" id="3_s3jt1"]
[ext_resource type="Texture2D" uid="uid://diiur7b2c5tiy" path="res://Images/Lock.png" id="4_6avgc"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8yv23")

[node name="Overlay" parent="." instance=ExtResource("2_eccf3")]
layout_mode = 0

[node name="Control" parent="." instance=ExtResource("3_s3jt1")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -180.0
offset_right = 169.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -60.0
offset_right = 65.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelNameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level Name
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PreviousButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "<"

[node name="LevelImage" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_nlsst")

[node name="UnlockImage" type="TextureRect" parent="VBoxContainer/HBoxContainer2/LevelImage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6avgc")

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = ">"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "High score:"

[node name="HighScoreText" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "--:--:--"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Play"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/PlayButton" to="." method="_on_button_pressed"]
